# EthBucharest-01

./: README.md  index.html  package-lock.json  package.json
contracts/arbi-proof/: Cargo.toml  README.md
contracts/arbi-proof/solidity/: ArbiProofInterface.sol  ArbiProofSolidity.sol
contracts/arbi-proof/src/: lib.rs
docs/: business-model.md
src/: App.tsx
src/components/: BenchmarkComparison.tsx  DisputeSimulator.tsx  FinancialComputations.tsx  FraudProofSimulator.tsx  GameLogicSimulator.tsx  NftGenerationSimulator.tsx  ZkProofVerification.tsx
src/contracts/: ArbiProofABI.ts  ArbiProofSimulator.ts
src/hooks/: useArbiProof.ts
src/types/: global.d.ts  index.ts
