[package]
name = "arbi-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.4.3"
hex = "0.4.3"
wee_alloc = "0.4.5"
sha3 = "0.10.8"
hex-literal = "0.3.1"

[features]
export-abi = []

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"